--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel = "stylesheet" href={{url_for('static',filename='dropdown.css')}}
 </head>
   <body>
   <form>
